--- a/cloudflare/index.html
+++ b/cloudflare/index.html
@@ -10,6 +10,10 @@
     <meta property="og:title" content="QuarTheDev" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="I&#039;m QuarTheDev, a Swedish open-source software developer." />
+    <meta property="og:image" content="card.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="800" />
     <meta property="og:image" content="https://quarthedev.pages.dev/assets/images/card.jpg?v=063aa589" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1280" />
