--- a/cloudflare/games/clickmatic/index.html
+++ b/cloudflare/games/clickmatic/index.html
@@ -2,10 +2,15 @@
 <html>
 <head>
   <title>Clickmatic</title>
+  <meta content="A modern, open-source clicker game." property="og:description">
+  <meta content="https://github.com/QuarTheDev/QuarTheDev/blob/main/cloudflare/games/clickmatic/assets/clickmatic-preview.png" property="og:image">
+  <link type="application/json+oembed" href="https://github.com/QuarTheDev/QuarTheDev/blob/main/cloudflare/games/clickmatic/assets/embed.json">
+  <meta name="theme-color" content="#5773C3">
+  <meta name="twitter:card" content="summary_large_image">
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <iframe id="desmosFrame" src="https://www.desmos.com/calculator/tbvyfedlqc?embed&nobranding"></iframe>
+  <iframe id="desmosFrame" src="https://www.desmos.com/calculator/eqblef5vif?embed&nobranding"></iframe>
 
   <script src="script.js"></script>
 </body>
