--- a/cloudflare/games/clickmatic/index.html
+++ b/cloudflare/games/clickmatic/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>Clickmatic</title>
   <meta content="A modern, open-source clicker game." property="og:description">
-  <meta content="https://github.com/QuarTheDev/QuarTheDev/blob/main/cloudflare/games/clickmatic/assets/clickmatic-preview.png" property="og:image">
-  <link type="application/json+oembed" href="https://github.com/QuarTheDev/QuarTheDev/blob/main/cloudflare/games/clickmatic/assets/embed.json">
+  <meta content="https://raw.githubusercontent.com/QuarTheDev/QuarTheDev/main/cloudflare/games/clickmatic/assets/clickmatic-preview.png" property="og:image">
+  <link type="application/json+oembed" href="https://raw.githubusercontent.com/QuarTheDev/QuarTheDev/main/cloudflare/games/clickmatic/assets/embed.json">
   <meta name="theme-color" content="#5773C3">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="stylesheet" type="text/css" href="styles.css">
