--- a/cloudflare/screensaver/1/index.html
+++ b/cloudflare/screensaver/1/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
 <div id="dvd"></div>
+
+</body>
+</html>
