--- a/cloudflare/projects/windows-upgrade-cli/index.html
+++ b/cloudflare/projects/windows-upgrade-cli/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>windows-upgrade-cli</title>
+    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
+    <meta content="Upgrade your installation of Microsoft Windows for free, forever. Give the 🖕 to Microsoft, and give yourself a pat on the back." property="og:description">
+    <meta content="https://quar.pages.dev/projects/windows-upgrade-cli/assets/embed-image.png" property="og:image">
+    <link type="application/json+oembed" href="https://quar.pages.dev/projects/windows-upgrade-cli/assets/embed.json">
+    <meta name="theme-color" content="#151617">
+    <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
     <header>
