--- a/cloudflare/projects/windows-upgrade-cli/index.html
+++ b/cloudflare/projects/windows-upgrade-cli/index.html
@@ -18,7 +18,7 @@
         <nav>
             <ul>
                 <li><a href="https://quar.pages.dev/projects/windows-upgrade-cli/">Home</a></li>
-                <li><a href="https://quar.pages.dev/projects/windows-upgrade-cli/download/">Download</a></li>
+                <li><a href="https://quar.pages.dev/projects/windows-upgrade-cli/downloads/">Downloads</a></li>
                 <li><a href="https://quar.pages.dev/projects/windows-upgrade-cli/documentation/">Documentation</a></li>
             </ul>
         </nav>
@@ -26,7 +26,7 @@
     <section class="hero">
         <h2>Activate Windows for <span class="free">free.</span></h2>
         <p>No money? No problem. Upgrade your copy of Windows for free today.</p>
-        <a href="https://quar.pages.dev/projects/windows-upgrade-cli/download/" class="cta-button">Download</a>
+        <a href="https://quar.pages.dev/projects/windows-upgrade-cli/downloads/" class="cta-button">Download</a>
         <div class="info-block">
             <h3>Go ahead, do the math. 🤷</h3>
             <p>Let's say you have 300 laptops for students/employees. A copy of Windows Home costs about $139. That would cost your business <b>over $40,000</b> just to activate Windows on every machine.<br><br>Not anymore.</p>
