--- a/cloudflare/404.html
+++ b/cloudflare/404.html
@@ -5,6 +5,12 @@
     <meta charSet="utf-8" />
     <title>404: This page could not be found</title>
     <meta name="next-head-count" content="3" />
+    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
+    <meta content="I'm Quar, a passionate, down-to-earth guy with many hobbies. This is my website." property="og:description">
+    <meta content="https://quar.pages.dev/assets/embed-image.png" property="og:image">
+    <link type="application/json+oembed" href="https://quar.pages.dev/assets/windows-upgrade-cli/assets/embed.json">
+    <meta name="theme-color" content="#151617">
+    <meta name="twitter:card" content="summary_large_image">
     <noscript data-n-css=""></noscript>
   </head>
   <body>
