--- a/cloudflare/projects/static/index.html
+++ b/cloudflare/projects/static/index.html
@@ -12,8 +12,8 @@
         </header>
 
         <div class="button-container">
-            <a href="/static/bnw" class="button">B&amp;W</a>
-            <a href="/static/rgb" class="button">RGB</a>
+            <a href="https://quar.pages/dev/projects/static/bnw" class="button">B&amp;W</a>
+            <a href="https://quar.pages/dev/projects/static/rgb" class="button">RGB</a>
         </div>
     </div>
 </body>
