--- a/cloudflare/projects/index.html
+++ b/cloudflare/projects/index.html
@@ -23,15 +23,39 @@
 
   <section id="links">
     <div class="container">
-      <h2>Contact</h2>
-      <p>Want to get in touch with me? I have a couple ways you can reach out.</p>
-      <div class="buttons">
-        <a class="button" href="mailto:quarthedev@proton.me">Email</a>
-        <a class="button" href="xmpp:quarthedev@linuxlovers.at">XMPP</a>
-        <a class="button" href="discord://-/users/1049147835351838771/">Discord</a>
-      </div>
+      <h2>Projects</h2>
+      <p>I have a list of projects I'm actively working on. There's much more on my GitHub, but these are a few things I'm quite proud of.</p>
     </div>
   </section>
+  
+  <section id="links">
+    <div class="container">
+      <h2><code>windows-upgrade-cli</code></h2>
+      <p>This is a command-line utility that upgrades Windows 11 for free.</p>
+      <img src="https://quar.pages.dev/projects/windows-upgrade-cli/assets/embed-image.png">
+      <a class="button" href="https://quar.pages.dev/projects/windows-upgrade-cli">View More</a>
+    </div>
+  </section>
+  
+  <section id="links">
+    <div class="container">
+      <h2>Clickmatic</h2>
+      <p>A fairly basic, open-source 'clicker' game. How many clicks can you get?</p>
+      <img src="https://quar.pages.dev/projects/clickmatic/assets/embed-image.png">
+      <a class="button" href="https://quar.pages.dev/projects/clickmatic/">Play Now</a>
+    </div>
+  </section>
+  
+    <section id="links">
+    <div class="container">
+      <h2>Static</h2>
+      <p>A static generation tool that runs completely in your browser.</p>
+      <img src="https://quar.pages.dev/projects/static/assets/embed-image.png">
+      <a class="button" href="https://quar.pages.dev/projects/static/">View More</a>
+    </div>
+  </section>
+  
+  <br> <br> <br> <br> <br>
   
   <div class="notif peek">
     <b>ⓘ</b> This is the website redesign, still in development.
