--- a/cloudflare/index.html
+++ b/cloudflare/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="content-type" content="text/html; charset=windows-1252">
   <meta content="I'm Quar, a passionate, down-to-earth guy with many hobbies. This is my website." property="og:description">
   <meta content="https://quar.pages.dev/assets/embed-image.png" property="og:image">
-  <link type="application/json+oembed" href="https://quar.pages.dev/assets/windows-upgrade-cli/assets/embed.json">
+  <link type="application/json+oembed" href="https://quar.pages.dev/assets/embed.json">
   <meta name="theme-color" content="#151617">
   <meta name="twitter:card" content="summary_large_image">
 </head>
