implement 2 new projects

--- a/cloudflare/projects/index.html
+++ b/cloudflare/projects/index.html
@@ -64,11 +64,11 @@
       <h2>Clickmatic</h2>
       <p>A fairly basic, open-source 'clicker' game. How many clicks can you get?</p>
       <img src="https://quar.pages.dev/projects/clickmatic/assets/embed-image.png">
-      <a class="button" href="https://quar.pages.dev/projects/clickmatic/">Play Now</a>
+      <a class="button" href="https://quar.pages.dev/projects/clickmatic/">Play</a>
     </div>
   </section>
   
-    <section id="links">
+  <section id="links">
     <div class="container">
       <h2>Static</h2>
       <p>A static generation tool that runs completely in your browser.</p>
@@ -77,6 +77,24 @@
     </div>
   </section>
   
+  <section id="links">
+    <div class="container">
+      <h2>Quar's Userscripts</h2>
+      <p>A public repository of userscripts I've created over the years.</p>
+      <img src="https://quar.pages.dev/projects/userscripts/assets/embed-image.png">
+      <a class="button" href="https://quar.pages.dev/projects/userscripts/">View More</a>
+    </div>
+  </section>
+  
+  <section id="links">
+    <div class="container">
+      <h2>The Incident</h2>
+      <p>You will see such pretty things.</p>
+      <img src="https://quar.pages.dev/projects/the-incident/assets/embed-image.png">
+      <a class="button" href="https://quar.pages.dev/projects/the-incident/">Play</a>
+    </div>
+  </section>
+
   <br> <br> <br> <br> <br>
   
   <div class="notif peek">
