--- a/cloudflare/404.html
+++ b/cloudflare/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width" />
-    <meta charSet="utf-8" />
+    <meta charset="utf-8" />
     <title>404: This page could not be found</title>
     <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     <meta content="I'm Quar, a passionate, down-to-earth guy with many hobbies. This is my website." property="og:description">
