--- a/projects/index.html
+++ b/projects/index.html
@@ -58,6 +58,24 @@
       <a class="button" href="https://quar.pages.dev/projects/windows-upgrade-cli">View More</a>
     </div>
   </section>
+
+  <section id="links">
+    <div class="container">
+      <h2>SpotX-GUI</h2>
+      <p>A utility to block all Spotify ads in the desktop client.</p>
+      <img src="https://quar.pages.dev/projects/spotx-gui/assets/embed-image.png">
+      <a class="button" href="https://quar.pages.dev/projects/spotx-gui/">View More</a>
+    </div>
+  </section>
+
+  <section id="links">
+    <div class="container">
+      <h2>Quar's Userscripts</h2>
+      <p>A public repository of userscripts I've created over the years.</p>
+      <img src="https://quar.pages.dev/projects/userscripts/assets/embed-image.png">
+      <a class="button" href="https://quar.pages.dev/projects/userscripts/">View More</a>
+    </div>
+  </section>
   
   <section id="links">
     <div class="container">
@@ -79,21 +97,23 @@
   
   <section id="links">
     <div class="container">
-      <h2>Quar's Userscripts</h2>
-      <p>A public repository of userscripts I've created over the years.</p>
-      <img src="https://quar.pages.dev/projects/userscripts/assets/embed-image.png">
-      <a class="button" href="https://quar.pages.dev/projects/userscripts/">View More</a>
-    </div>
-  </section>
-  
-  <section id="links">
-    <div class="container">
       <h2>The Incident</h2>
       <p>You will see such pretty things.</p>
       <img src="https://quar.pages.dev/projects/the-incident/assets/embed-image.png">
       <a class="button" href="https://quar.pages.dev/projects/the-incident/">Play</a>
     </div>
   </section>
+
+  <section id="links">
+    <div class="container">
+      <h2>The Menu</h2>
+      <p>What's in the menu? We may never know.</p>
+      <img src="https://quar.pages.dev/projects/the-menu/assets/embed-image.png">
+      <a class="button" href="https://quar.pages.dev/projects/the-menu/">Play</a>
+    </div>
+  </section>
+
+  <div class="prefooter"></div>
 
   <br> <br> <br> <br> <br>
   
