--- a/projects/index.html
+++ b/projects/index.html
@@ -32,7 +32,7 @@
 <body>
   <header>
     <div class="header-content">
-      <h1>Quar.<span class="preview-text">V2</span></h1>
+      <h1>Quar.</h1>
       <nav>
         <ul>
           <li><a href="https://quar.pages.dev/">Home</a></li>
@@ -116,10 +116,6 @@
   <div class="prefooter"></div>
 
   <br> <br> <br> <br> <br>
-  
-  <div class="notif peek">
-    <b>ⓘ</b> This is the website redesign, still in development.
-  </div>
 
   <footer>
     <div class="container">
