--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
       <div>
         <style>
           body {
-            margin: 0
+            margin: 0;
           }
         </style>
         <h1 style="display:inline-block;border-right:1px solid rgba(255, 255, 255,.3);margin:0;margin-right:20px;padding:10px 23px 10px 0;font-size:24px;font-weight:500;vertical-align:top">404</h1>
