--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
   <header>
     <div class="header-content">
-      <h1>Quar.<span class="preview-text">V2</span></h1>
+      <h1>Quar.</h1>
       <nav>
         <ul>
           <li><a href="https://quar.pages.dev/">Home</a></li>
@@ -62,10 +62,6 @@
       <p></p>
     </div>
   </section>
-  
-  <div class="notif peek">
-    <b>ⓘ</b> This is the website redesign, still in development.
-  </div>
 
   <footer>
     <div class="container">
