--- a/projects/the-menu/index.html
+++ b/projects/the-menu/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Setup Menu Page</title>
+<title>the menu</title>
 <link rel="stylesheet" href="styles.css">
 <script src="script.js" defer></script>
 </head>
