--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="buttons">
         <a class="button" href="https://github.com/quarthedev/">GitHub</a>
         <a class="button" href="https://instagram.com/quarthedev/">Instagram</a>
-        <a class="button" href="https://twitter.com/quarthedev/">Twitter</a>
+        <a class="button" href="https://mastodon.com/@quarthedev/">Mastodon</a>
         <a class="button" href="https://buymeacoffee.com/quarthedev/">Donate</a>
         <a class="button" href="mailto:quarthedev@proton.me">Email</a>
       </div>
