patched inconsistent js

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <link rel="manifest" href="/assets/icons/manifest.json">
   <meta name="msapplication-TileColor" content="#151617">
   <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <header>
