Updated contact information

--- a/contact/index.html
+++ b/contact/index.html
@@ -49,8 +49,8 @@
       <p>Want to get in touch with me? I have a couple ways you can reach out.</p>
       <div class="buttons">
         <a class="button" href="mailto:quarthedev@proton.me">Email</a>
-        <a class="button" href="xmpp:quarthedev@linuxlovers.at">XMPP</a>
-        <a class="button" href="discord://-/users/1049147835351838771/">Discord</a>
+        <a class="button" href="xmpp:quarthedev@sure.im">XMPP</a>
+        <a class="button" href="https://mastodon.social/@quarthedev">Mastodon</a>
       </div>
     </div>
   </section>
