Updated About Me

--- a/projects/index.html
+++ b/projects/index.html
@@ -113,9 +113,7 @@
     </div>
   </section>
 
-  <div class="prefooter"></div>
-
-  <br> <br> <br> <br> <br>
+  <div class="pre-footer"></div>
 
   <footer>
     <div class="container">
