--- a/index.html
+++ b/index.html
@@ -59,15 +59,22 @@
   <section id="about">
     <div class="container">
       <h2>About Me</h2>
-      <p>I'm Quar, a passionate, down-to-earth guy with many hobbies, some of which include programming, film and photography, cycling, and downing a dozen energy drinks in one night.</p>
-      <p></p>
+      <p>I'm Quar, a committed free software activist and enthusiastic hobbyist programmer. I have a deep-rooted commitment to the Free Software Movement, I proudly advocate for the importance of open-source software and the freedom they provide to users across the globe.</p>
+      <p>From a young age, my fascination with technology and its potential to shape the world led me down the path of programming. What began as a little curiosity, swiftly transformed into a passionate and daily hobby, as I delved into various programming languages and projects, relishing the challenges and creative opportunities they presented.</p>
+      <p>I strive to empower individuals by promoting software that respects their essential freedoms: the freedom to use, study, modify, and distribute software as they see fit. I firmly believe that all technology should be accessible to everyone, and that the principles of openness and collaboration are integral to creating a more enjoyable digital landscape.</p>
+      <p>My journey as a programmer has been as wild as the first lines of code I've written years ago. From crafting elegant scripts to automate everyday tasks to contributing to larger open-source projects that benefit the community, I've always been driven by a desire to learn, create, and share. The thrill of seeing my code come to life and positively impact others is what continually fuels my programming endeavors.</p>
+      <p>When I'm not immersed in programming, you'll find me reading great books, cycling in my small town, and downing many, many energy drinks. Aside from my dedication to the principles of free software, my beliefs extend beyond just code; it's a mindset that guides my interactions with technology and the digital world at large.</p>
+      <p>Join me on this journey of exploration, innovation, and advocacy as I continue to champion the cause of free software, pushing the boundaries of what's possible, one line of code at a time. Let's collaborate, learn, and create together to build a future where technology serves as a force for good and empowers individuals to take control of their digital lives.</p>
     </div>
   </section>
 
+  <div class="pre-footer">
+  
   <footer>
     <div class="container">
       <p>&copy; 2023 Quar, all rights reserved.</p>
     </div>
   </footer>
+  
 </body>
 </html>
