--- a/projects/index.html
+++ b/projects/index.html
@@ -46,14 +46,14 @@
   <section id="links">
     <div class="container">
       <h2>Projects</h2>
-      <p>I have a list of projects I'm actively working on. There's much more on my GitHub, but these are a few things I'm quite proud of.</p>
+      <p>Welcome to my projects, a showcase of my passion for creativity and programming. Here you'll find an assortment of games, utilities, and pages that reflect my diverse interests. Each project represents a unique journey of exploration. Take a look below to discover what I've been working on:</p>
     </div>
   </section>
   
   <section id="links">
     <div class="container">
       <h2><code>windows-upgrade-cli</code></h2>
-      <p>This is a command-line utility that upgrades Windows 11 for free.</p>
+      <p>A quick command-line utility that upgrades Windows 11 for free.</p>
       <img src="https://quar.pages.dev/projects/windows-upgrade-cli/assets/embed-image.png">
       <a class="button" href="https://quar.pages.dev/projects/windows-upgrade-cli">View More</a>
     </div>
@@ -62,7 +62,7 @@
   <section id="links">
     <div class="container">
       <h2>SpotX-GUI</h2>
-      <p>A utility to block all Spotify ads in the desktop client.</p>
+      <p>A simple utility to block all Spotify ads in the desktop client.</p>
       <img src="https://quar.pages.dev/projects/spotx-gui/assets/embed-image.png">
       <a class="button" href="https://quar.pages.dev/projects/spotx-gui/">View More</a>
     </div>
@@ -110,6 +110,14 @@
       <p>What's in the menu? We may never know.</p>
       <img src="https://quar.pages.dev/projects/the-menu/assets/embed-image.png">
       <a class="button" href="https://quar.pages.dev/projects/the-menu/">Play</a>
+    </div>
+  </section>
+  
+  <section id="links">
+    <div class="container">
+      <h2>More Projects</h2>
+      <p>There's a lot more interesting and unique projects on my GitHub.</p>
+      <a class="button" href="https://github.com/QuarTheDev?tab=repositories&q=&type=source&language=&sort=name">View More</a>
     </div>
   </section>
 
