--- a/contact/direct/index.html
+++ b/contact/direct/index.html
@@ -61,6 +61,8 @@
     </div>
   </section>
 
+  <div class="pre-footer"></div>
+  
   <footer>
     <div class="container">
       <p>&copy; 2023 Quar, all rights reserved.</p>
