--- a/projects/walmart/index.html
+++ b/projects/walmart/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>ADMINPANEL</title>
-    <link rel="icon" type="image/x-icon" href="https://external-content.duckduckgo.com/ip3/corporate.walmart.com.ico">
+    <link rel="icon" type="image/x-icon" href="/projects/walmart/assets/favicon.ico">
 </head>
 <body>
     <header>
