--- a/projects/walmart/index.html
+++ b/projects/walmart/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Walmart_logo.svg/1200px-Walmart_logo.svg.png" alt="Walmart">
+        <img src="/projects/walmart/assets/logo.png" alt="Walmart">
     </header>
     <main>
         <div class="admin-panel">
