--- a/projects/walmart/index.html
+++ b/projects/walmart/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="/projects/walmart/assets/logo.png" alt="Walmart">
+        <img src="/projects/walmart/assets/logo.png?v=1" alt="Walmart">
     </header>
     <main>
         <div class="admin-panel">
