--- a/projects/walmart/index.html
+++ b/projects/walmart/index.html
@@ -41,6 +41,7 @@
             <button class="ok-button" id="okButton">OK</button>
         </div>
     </main>
+    <div class="overlay" id="overlay"></div>
     <script src="script.js"></script>
 </body>
 </html>
