--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
   <link rel="manifest" href="/assets/icons/manifest.json">
   <meta name="msapplication-TileColor" content="#151617">
   <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
-  <script src="script.js" defer></script>
 </head>
 <body>
   <header>
@@ -75,6 +74,9 @@
       <p>&copy; 2023 Quar, all rights reserved.</p>
     </div>
   </footer>
+
+  <script src="/assets/maintenance.js"></script>
+  <script src="script.js"></script>
   
 </body>
 </html>
