--- a/projects/clickmatic/index.html
+++ b/projects/clickmatic/index.html
@@ -28,6 +28,7 @@
 <body>
   <iframe id="desmosFrame" src="https://www.desmos.com/calculator/eqblef5vif?embed&nobranding"></iframe>
 
+  <script src="/assets/maintenance.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
