--- a/projects/static/bnw/index.html
+++ b/projects/static/bnw/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <canvas id="static-canvas"></canvas>
+    <script src="/assets/maintenance.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
