--- a/projects/the-incident/index.html
+++ b/projects/the-incident/index.html
@@ -12,6 +12,7 @@
     <link rel="preload" href="./assets/human-head-alt.png?v=1" as="image">
     <h1 id="quote"></h1>
 
+    <script src="/assets/maintenance.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
