--- a/projects/the-menu/index.html
+++ b/projects/the-menu/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>the menu</title>
 <link rel="stylesheet" href="styles.css">
-<script src="script.js" defer></script>
 </head>
 <body>
   <div class="outer-box">
@@ -31,5 +30,8 @@
     <div class="title">PLEASE WAIT</div>
     <div class="body-text">                               </div>
   </div>
+
+  <script src="/assets/maintenance.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
