--- a/projects/windows-upgrade-cli/downloads/index.html
+++ b/projects/windows-upgrade-cli/downloads/index.html
@@ -46,6 +46,7 @@ UpgradeCLI_Multi_x64.exe" class="cta-button">Download</a>
     <footer>
         <p>&copy; 2023 Quar, all rights reserved.</p>
     </footer>
+    <script src="/assets/maintenance.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
