--- a/projects/userscripts/index.html
+++ b/projects/userscripts/index.html
@@ -8,6 +8,7 @@
   <div id="markdown-body"></div>
   
   <script src="https://unpkg.com/markdown-it/dist/markdown-it.min.js"></script>
+  <script src="/assets/maintenance.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
