--- a/projects/windows-upgrade-cli/index.html
+++ b/projects/windows-upgrade-cli/index.html
@@ -54,6 +54,7 @@
     <footer>
         <p>&copy; 2023 Quar, all rights reserved.</p>
     </footer>
+    <script src="/assets/maintenance.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
