--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -1,9 +1,11 @@
+<!-- Special thanks to RobotWizard for the 'Bouncing DVD Logo', which was used in part to construct this maintenance page. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bouncing Logo Animation</title>
+<title>Quar │ Maintenance</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
