--- a/contact/direct/index.html
+++ b/contact/direct/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="styles.css">
   <meta http-equiv="content-type" content="text/html; charset=windows-1252">
   <meta content="I'm Quar, a passionate, down-to-earth guy with many hobbies. This is my website." property="og:description">
-  <meta content="https://quar.pages.dev/assets/embed-image.png" property="og:image">
-  <link type="application/json+oembed" href="https://quar.pages.dev/assets/embed.json">
+  <meta content="/assets/embed-image.png" property="og:image">
+  <link type="application/json+oembed" href="/assets/embed.json">
   <meta name="theme-color" content="#151617">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/apple-icon-57x57.png">
