--- a/contact/index.html
+++ b/contact/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="styles.css">
   <meta http-equiv="content-type" content="text/html; charset=windows-1252">
   <meta content="I'm Quar, a passionate, down-to-earth guy with many hobbies. This is my website." property="og:description">
-  <meta content="https://quar.pages.dev/assets/embed-image.png" property="og:image">
-  <link type="application/json+oembed" href="https://quar.pages.dev/assets/embed.json">
+  <meta content="/assets/embed-image.png" property="og:image">
+  <link type="application/json+oembed" href="/assets/embed.json">
   <meta name="theme-color" content="#151617">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/apple-icon-57x57.png">
@@ -34,9 +34,9 @@
       <h1>Quar.</h1>
       <nav>
         <ul>
-          <li><a href="https://quar.pages.dev/">Home</a></li>
-          <li><a href="https://quar.pages.dev/projects/">Projects</a></li>
-          <li><a href="https://quar.pages.dev/contact/">Contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/projects/">Projects</a></li>
+          <li><a href="/contact/">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -50,7 +50,7 @@
         <a class="button" href="mailto:quarthedev@proton.me">Email</a>
         <a class="button" href="xmpp:quarthedev@sure.im">XMPP</a>
         <a class="button" href="https://mastodon.social/@quarthedev">Mastodon</a>
-        <a class="button" href="https://quar.pages.dev/contact/direct">Direct</a>
+        <a class="button" href="/contact/direct">Direct</a>
       </div>
     </div>
   </section>
