--- a/projects/index.html
+++ b/projects/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="styles.css">
   <meta http-equiv="content-type" content="text/html; charset=windows-1252">
   <meta content="I'm Quar, a passionate, down-to-earth guy with many hobbies. This is my website." property="og:description">
-  <meta content="https://quar.pages.dev/assets/embed-image.png" property="og:image">
-  <link type="application/json+oembed" href="https://quar.pages.dev/assets/embed.json">
+  <meta content="/assets/embed-image.png" property="og:image">
+  <link type="application/json+oembed" href="/assets/embed.json">
   <meta name="theme-color" content="#151617">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/apple-icon-57x57.png">
@@ -34,9 +34,9 @@
       <h1>Quar.</h1>
       <nav>
         <ul>
-          <li><a href="https://quar.pages.dev/">Home</a></li>
-          <li><a href="https://quar.pages.dev/projects/">Projects</a></li>
-          <li><a href="https://quar.pages.dev/contact/">Contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/projects/">Projects</a></li>
+          <li><a href="/contact/">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -53,8 +53,8 @@
     <div class="container">
       <h2><code>windows-upgrade-cli</code></h2>
       <p>A quick command-line utility that upgrades Windows 11 for free.</p>
-      <img src="https://quar.pages.dev/projects/windows-upgrade-cli/assets/embed-image.png">
-      <a class="button" href="https://quar.pages.dev/projects/windows-upgrade-cli">View More</a>
+      <img src="/projects/windows-upgrade-cli/assets/embed-image.png">
+      <a class="button" href="/projects/windows-upgrade-cli">View More</a>
     </div>
   </section>
 
@@ -62,8 +62,8 @@
     <div class="container">
       <h2>SpotX-GUI</h2>
       <p>A simple utility to block all Spotify ads in the desktop client.</p>
-      <img src="https://quar.pages.dev/projects/spotx-gui/assets/embed-image.png">
-      <a class="button" href="https://quar.pages.dev/projects/spotx-gui/">View More</a>
+      <img src="/projects/spotx-gui/assets/embed-image.png">
+      <a class="button" href="/projects/spotx-gui/">View More</a>
     </div>
   </section>
 
@@ -71,8 +71,8 @@
     <div class="container">
       <h2>Quar's Userscripts</h2>
       <p>A public repository of userscripts I've created over the years.</p>
-      <img src="https://quar.pages.dev/projects/userscripts/assets/embed-image.png">
-      <a class="button" href="https://quar.pages.dev/projects/userscripts/">View More</a>
+      <img src="/projects/userscripts/assets/embed-image.png">
+      <a class="button" href="/projects/userscripts/">View More</a>
     </div>
   </section>
   
@@ -80,8 +80,8 @@
     <div class="container">
       <h2>Clickmatic</h2>
       <p>A fairly basic, open-source 'clicker' game. How many clicks can you get?</p>
-      <img src="https://quar.pages.dev/projects/clickmatic/assets/embed-image.png">
-      <a class="button" href="https://quar.pages.dev/projects/clickmatic/">Play</a>
+      <img src="/projects/clickmatic/assets/embed-image.png">
+      <a class="button" href="/projects/clickmatic/">Play</a>
     </div>
   </section>
   
@@ -89,8 +89,8 @@
     <div class="container">
       <h2>Static</h2>
       <p>A static generation tool that runs completely in your browser.</p>
-      <img src="https://quar.pages.dev/projects/static/assets/embed-image.png">
-      <a class="button" href="https://quar.pages.dev/projects/static/">View More</a>
+      <img src="/projects/static/assets/embed-image.png">
+      <a class="button" href="/projects/static/">View More</a>
     </div>
   </section>
   
@@ -98,8 +98,8 @@
     <div class="container">
       <h2>The Incident</h2>
       <p>You will see such pretty things.</p>
-      <img src="https://quar.pages.dev/projects/the-incident/assets/embed-image.png">
-      <a class="button" href="https://quar.pages.dev/projects/the-incident/">Play</a>
+      <img src="/projects/the-incident/assets/embed-image.png">
+      <a class="button" href="/projects/the-incident/">Play</a>
     </div>
   </section>
 
@@ -107,8 +107,8 @@
     <div class="container">
       <h2>The Menu</h2>
       <p>What's in the menu? We may never know.</p>
-      <img src="https://quar.pages.dev/projects/the-menu/assets/embed-image.png">
-      <a class="button" href="https://quar.pages.dev/projects/the-menu/">Play</a>
+      <img src="/projects/the-menu/assets/embed-image.png">
+      <a class="button" href="/projects/the-menu/">Play</a>
     </div>
   </section>
   
