--- a/v1/about/index.html
+++ b/v1/about/index.html
@@ -553,7 +553,7 @@
         <div class="inner">
           <ul id="buttons02" class="buttons">
             <li>
-              <a href="https://quar.pages.dev/v1/" class="button n01">
+              <a href="/v1/" class="button n01">
                 <svg>
                   <use xlink:href="#icon-2a747dd19e728944f8c54ef1b55a59c6">
                   </use>
