--- a/v1/index.html
+++ b/v1/index.html
@@ -14,13 +14,13 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="800" />
-    <meta property="og:image" content="https://quar.pages.dev/assets/images/card.jpg?v=063aa589" />
+    <meta property="og:image" content="/assets/images/card.jpg?v=063aa589" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="800" />
-    <meta property="og:url" content="https://quar.pages.dev/v1/" />
+    <meta property="og:url" content="/v1/" />
     <meta property="twitter:card" content="summary_large_image" />
-    <link rel="canonical" href="https://quar.pages.dev/v1/" />
+    <link rel="canonical" href="/v1/" />
     <link href="https://fonts.googleapis.com/css2?display=swap&family=Inter:ital,wght@0,600;0,800;1,600;1,800&family=DM+Sans:ital,wght@0,400;0,700;1,400;1,700" rel="stylesheet" type="text/css" />
     <style>html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{
       margin:0;
@@ -941,7 +941,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="https://quar.pages.dev/v1/about" class="button n05">
+                      <a href="/v1/about" class="button n05">
                         <svg>
                           <use xlink:href="#icon-0fab58c8cba7ae847fa5ba32ea5a4bea">
                           </use>
