--- a/home/index.html
+++ b/home/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="QuarTheDev" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="I&#039;m QuarTheDev, a Swedish open-source software developer." />
-    <meta property="og:image" content="https://quar.pages.dev/card.jpg" />
+    <meta property="og:image" content="/card.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="800" />
