--- a/projects/static/index.html
+++ b/projects/static/index.html
@@ -28,8 +28,8 @@
         </header>
 
         <div class="button-container">
-            <a href="https://quar.pages.dev/projects/static/bnw" class="button">B&amp;W</a>
-            <a href="https://quar.pages.dev/projects/static/rgb" class="button">RGB</a>
+            <a href="/projects/static/bnw" class="button">B&amp;W</a>
+            <a href="/lass="button">RGB</a>
         </div>
     </div>
 </body>
