--- a/projects/windows-upgrade-cli/downloads/index.html
+++ b/projects/windows-upgrade-cli/downloads/index.html
@@ -7,8 +7,8 @@
     <title>windows-upgrade-cli - Downloads</title>
     <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     <meta content="Upgrade your installation of Microsoft Windows for free, forever. Give the 🖕 to Microsoft, and give yourself a pat on the back." property="og:description">
-    <meta content="https://quar.pages.dev/projects/windows-upgrade-cli/assets/embed-image.png" property="og:image">
-    <link type="application/json+oembed" href="https://quar.pages.dev/projects/windows-upgrade-cli/assets/embed.json">
+    <meta content="/projects/windows-upgrade-cli/assets/embed-image.png" property="og:image">
+    <link type="application/json+oembed" href="/projects/windows-upgrade-cli/assets/embed.json">
     <meta name="theme-color" content="#151617">
     <meta name="twitter:card" content="summary_large_image">
 </head>
@@ -17,9 +17,9 @@
         <h1 id="title">windows-upgrade-cli</h1>
         <nav>
             <ul>
-                <li><a href="https://quar.pages.dev/projects/windows-upgrade-cli/">Home</a></li>
-                <li><a href="https://quar.pages.dev/projects/windows-upgrade-cli/downloads/">Downloads</a></li>
-                <li><a href="https://quar.pages.dev/projects/windows-upgrade-cli/documentation/">Documentation</a></li>
+                <li><a href="/projects/windows-upgrade-cli/">Home</a></li>
+                <li><a href="/projects/windows-upgrade-cli/downloads/">Downloads</a></li>
+                <li><a href="/projects/windows-upgrade-cli/documentation/">Documentation</a></li>
             </ul>
         </nav>
     </header>
