--- a/projects/windows-upgrade-cli/index.html
+++ b/projects/windows-upgrade-cli/index.html
@@ -7,8 +7,8 @@
     <title>windows-upgrade-cli</title>
     <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     <meta content="Upgrade your installation of Microsoft Windows for free, forever. Give the 🖕 to Microsoft, and give yourself a pat on the back." property="og:description">
-    <meta content="https://quar.pages.dev/projects/windows-upgrade-cli/assets/embed-image.png" property="og:image">
-    <link type="application/json+oembed" href="https://quar.pages.dev/projects/windows-upgrade-cli/assets/embed.json">
+    <meta content="/projects/windows-upgrade-cli/assets/embed-image.png" property="og:image">
+    <link type="application/json+oembed" href="/projects/windows-upgrade-cli/assets/embed.json">
     <meta name="theme-color" content="#151617">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/apple-icon-57x57.png">
@@ -33,20 +33,20 @@
         <h1 id="title">windows-upgrade-cli</h1>
         <nav>
             <ul>
-                <li><a href="https://quar.pages.dev/projects/windows-upgrade-cli/">Home</a></li>
-                <li><a href="https://quar.pages.dev/projects/windows-upgrade-cli/downloads/">Downloads</a></li>
-                <li><a href="https://quar.pages.dev/projects/windows-upgrade-cli/documentation/">Documentation</a></li>
+                <li><a href="/projects/windows-upgrade-cli/">Home</a></li>
+                <li><a href="/projects/windows-upgrade-cli/downloads/">Downloads</a></li>
+                <li><a href="/projects/windows-upgrade-cli/documentation/">Documentation</a></li>
             </ul>
         </nav>
     </header>
     <section class="hero">
         <h2>Activate Windows for <span class="free">free.</span></h2>
         <p>No money? No problem. Upgrade your copy of Windows for free today.</p>
-        <a href="https://quar.pages.dev/projects/windows-upgrade-cli/downloads/" class="cta-button">Download</a>
+        <a href="/projects/windows-upgrade-cli/downloads/" class="cta-button">Download</a>
         <div class="info-block">
             <h3>Go ahead, do the math. 🤷</h3>
             <p>Let's say you have 300 laptops for students/employees. A copy of Windows Home costs about $139. That would cost your business <b>over $40,000</b> just to activate Windows on every machine.<br><br>Not anymore.</p>
-            <img src="https://quar.pages.dev/projects/windows-upgrade-cli/assets/activation_image.png" alt="Windows Activation image">
+            <img src="/projects/windows-upgrade-cli/assets/activation_image.png" alt="Windows Activation image">
             <p><code>windows-upgrade-cli</code> cuts down costs <b>tremendously.</b> As a valued consumer, you shouldn't have to pay money to use hardware you already own. We understand the importance of value for money, ensuring that you can use the computer you paid for without breaking the bank.</p>
             <p>Gone are the days of buying cheap product keys from sketchy websites. Gone are the days of running shady .exe's to activate Windows for free. You now have a safe, simple, open-source solution.</p>
         </div>
